Continuando con la biostadística
Former-commit-id: 5f0eacb5bacc376d5c9b6e62cb7bc34eced8f9b8

--- a/code/annotations.ipynb
+++ b/code/annotations.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "## Downloading the table 3, for supporting information found in the article.\n",
     "\n",
-    "After that we will use the function in pandas ```pd.read_table()``` to download the data.\n",
+    "After that we will use the function in pandas ```pd.read_clipboard()``` to download the data.\n",
     "\n",
     "https://onlinelibrary.wiley.com/action/downloadSupplement?doi=10.1002%2Fgcc.22314&file=gcc22314-sup-0005-supptable5.docx"
    ]
@@ -649,6 +649,254 @@
     "\n",
     "* ***method1*** run with Agilent Sureselect XT Human All Exon 50Mb\n",
     "* ***method2*** run with Agilent SureSelect_XT_Human_All_Exon_V5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensembl Variation -Calculated variant consequences\n",
+    "\n",
+    "from this table wi will extract the most severes consequences of Variations\n",
+    "\n",
+    "https://www.ensembl.org/info/genome/variation/prediction/predicted_data.html#consequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>*</th>\n",
+       "      <th>SO term</th>\n",
+       "      <th>SO description</th>\n",
+       "      <th>SO accession</th>\n",
+       "      <th>Display term</th>\n",
+       "      <th>IMPACT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>transcript_ablation</td>\n",
+       "      <td>A feature ablation whereby the deleted region ...</td>\n",
+       "      <td>SO:0001893</td>\n",
+       "      <td>Transcript ablation</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>splice_acceptor_variant</td>\n",
+       "      <td>A splice variant that changes the 2 base regio...</td>\n",
+       "      <td>SO:0001574</td>\n",
+       "      <td>Splice acceptor variant</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>splice_donor_variant</td>\n",
+       "      <td>A splice variant that changes the 2 base regio...</td>\n",
+       "      <td>SO:0001575</td>\n",
+       "      <td>Splice donor variant</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>stop_gained</td>\n",
+       "      <td>A sequence variant whereby at least one base o...</td>\n",
+       "      <td>SO:0001587</td>\n",
+       "      <td>Stop gained</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>frameshift_variant</td>\n",
+       "      <td>A sequence variant which causes a disruption o...</td>\n",
+       "      <td>SO:0001589</td>\n",
+       "      <td>Frameshift variant</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    *                  SO term  \\\n",
+       "0 NaN      transcript_ablation   \n",
+       "1 NaN  splice_acceptor_variant   \n",
+       "2 NaN     splice_donor_variant   \n",
+       "3 NaN              stop_gained   \n",
+       "4 NaN       frameshift_variant   \n",
+       "\n",
+       "                                      SO description SO accession  \\\n",
+       "0  A feature ablation whereby the deleted region ...   SO:0001893   \n",
+       "1  A splice variant that changes the 2 base regio...   SO:0001574   \n",
+       "2  A splice variant that changes the 2 base regio...   SO:0001575   \n",
+       "3  A sequence variant whereby at least one base o...   SO:0001587   \n",
+       "4  A sequence variant which causes a disruption o...   SO:0001589   \n",
+       "\n",
+       "              Display term IMPACT  \n",
+       "0      Transcript ablation   HIGH  \n",
+       "1  Splice acceptor variant   HIGH  \n",
+       "2     Splice donor variant   HIGH  \n",
+       "3              Stop gained   HIGH  \n",
+       "4       Frameshift variant   HIGH  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "severe_consequences=pd.read_clipboard()\n",
+    "severe_consequences.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>so_term</th>\n",
+       "      <th>so_description</th>\n",
+       "      <th>so_accession</th>\n",
+       "      <th>display_term</th>\n",
+       "      <th>impact</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>transcript_ablation</td>\n",
+       "      <td>A feature ablation whereby the deleted region ...</td>\n",
+       "      <td>SO:0001893</td>\n",
+       "      <td>Transcript ablation</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>splice_acceptor_variant</td>\n",
+       "      <td>A splice variant that changes the 2 base regio...</td>\n",
+       "      <td>SO:0001574</td>\n",
+       "      <td>Splice acceptor variant</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>splice_donor_variant</td>\n",
+       "      <td>A splice variant that changes the 2 base regio...</td>\n",
+       "      <td>SO:0001575</td>\n",
+       "      <td>Splice donor variant</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>stop_gained</td>\n",
+       "      <td>A sequence variant whereby at least one base o...</td>\n",
+       "      <td>SO:0001587</td>\n",
+       "      <td>Stop gained</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>frameshift_variant</td>\n",
+       "      <td>A sequence variant which causes a disruption o...</td>\n",
+       "      <td>SO:0001589</td>\n",
+       "      <td>Frameshift variant</td>\n",
+       "      <td>HIGH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   so_term                                     so_description  \\\n",
+       "0      transcript_ablation  A feature ablation whereby the deleted region ...   \n",
+       "1  splice_acceptor_variant  A splice variant that changes the 2 base regio...   \n",
+       "2     splice_donor_variant  A splice variant that changes the 2 base regio...   \n",
+       "3              stop_gained  A sequence variant whereby at least one base o...   \n",
+       "4       frameshift_variant  A sequence variant which causes a disruption o...   \n",
+       "\n",
+       "  so_accession             display_term impact  \n",
+       "0   SO:0001893      Transcript ablation   HIGH  \n",
+       "1   SO:0001574  Splice acceptor variant   HIGH  \n",
+       "2   SO:0001575     Splice donor variant   HIGH  \n",
+       "3   SO:0001587              Stop gained   HIGH  \n",
+       "4   SO:0001589       Frameshift variant   HIGH  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "severe_consequences=severe_consequences.drop(\"*\", axis=1)\n",
+    "\n",
+    "severe_consequences.columns=severe_consequences.columns.str.replace(\n",
+    "    \" \", \"_\"\n",
+    "    ).str.lower()\n",
+    "\n",
+    "severe_consequences.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "severe_consequences.to_csv(\"../metadata/severe_consequences.csv\",\n",
+    "                           index=False)"
    ]
   }
  ],
