Principalmente modificar README
Former-commit-id: 6fc1172bd692ea5b9fbbc27d4d65c1c1257158ac

--- a/code/annotations.ipynb
+++ b/code/annotations.ipynb
@@ -647,8 +647,8 @@
     "\n",
     "### Methods for seguencing\n",
     "\n",
-    "* ***method1*** run with Agilent Sureselect XT Human All Exon 50Mb\n",
-    "* ***method2*** run with Agilent SureSelect_XT_Human_All_Exon_V5"
+    "* **method1** run with Agilent Sureselect XT Human All Exon 50Mb\n",
+    "* **method2** run with Agilent SureSelect_XT_Human_All_Exon_V5"
    ]
   },
   {
