--- a/code/design_final_plot.ipynb
+++ b/code/design_final_plot.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "5ab7c903",
    "metadata": {},
    "outputs": [],
    "source": [
-    "suppressMessages({\n",
+    "suppressMessages(suppressWarnings({\n",
     "        library(tidyverse)\n",
-    "})"
+    "}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "044a07a4",
    "metadata": {},
    "outputs": [],
@@ -25,12 +25,13 @@
     "    braf <- read_tsv(\"../results/biostatistics/joined_tables/BRAF.tsv\")\n",
     "    kras <- read_tsv(\"../results/biostatistics/joined_tables/KRAS.tsv\")\n",
     "    pik3ca <- read_tsv(\"../results/biostatistics/joined_tables/PIK3CA.tsv\")\n",
+    "    tp53 <- read_tsv(\"../results/biostatistics/joined_tables/TP53.tsv\")\n",
     "}))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "2d3be5f1",
    "metadata": {},
    "outputs": [],
@@ -38,97 +39,127 @@
     "## Processing to get the values that we want\n",
     "\n",
     "df_apc <- apc %>%\n",
-    "    select(\"sample\",\"symbol\") %>% \n",
+    "    select(\"sample\",\"symbol\",\"variant_class\") %>% \n",
     "    separate_wider_delim(sample, delim=\"_\", names=c(\"sample\",\"chr\")) %>% \n",
     "    select(-\"chr\") \n",
     "\n",
     "df_braf <- braf %>%\n",
-    "    select(\"sample\",\"symbol\") %>% \n",
+    "    select(\"sample\",\"symbol\",\"variant_class\") %>% \n",
     "    separate_wider_delim(sample, delim=\"_\", names=c(\"sample\",\"chr\")) %>% \n",
     "    select(-\"chr\") \n",
     "\n",
     "df_kras <- kras %>%\n",
-    "    select(\"sample\",\"symbol\") %>% \n",
+    "    select(\"sample\",\"symbol\",\"variant_class\") %>% \n",
     "    separate_wider_delim(sample, delim=\"_\", names=c(\"sample\",\"chr\")) %>% \n",
     "    select(-\"chr\") \n",
     "\n",
     "df_pik3ca <- pik3ca %>%\n",
-    "    select(\"sample\",\"symbol\") %>% \n",
+    "    select(\"sample\",\"symbol\",\"variant_class\") %>% \n",
     "    separate_wider_delim(sample, delim=\"_\", names=c(\"sample\",\"chr\")) %>% \n",
-    "    select(-\"chr\") \n"
+    "    select(-\"chr\") \n",
+    "\n",
+    "df_tp53 <- tp53 %>%\n",
+    "    select(\"sample\",\"symbol\",\"variant_class\") %>% \n",
+    "    separate_wider_delim(sample, delim=\"_\", names=c(\"sample\",\"chr\")) %>% \n",
+    "    select(-\"chr\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "id": "c378515a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Joining the data together\n",
     "suppressMessages(suppressWarnings({\n",
-    "    df_genes <- rbind(df_apc,df_braf,df_kras,df_pik3ca) %>%\n",
-    "        group_by(sample,symbol) %>%\n",
+    "    df_genes <- rbind(df_apc,df_braf,df_kras,df_pik3ca,df_tp53) %>%\n",
+    "        group_by(sample,symbol,variant_class) %>%\n",
     "        summarise(n=n())\n",
     "    \n",
     "    df_genes_processed <- expand.grid(sample=as.character(unique(as.character(df_genes$sample))),\n",
-    "                                      symbol=as.character(unique(as.character(df_genes$symbol)))) %>% \n",
+    "                                      symbol=as.character(unique(as.character(df_genes$symbol))),\n",
+    "                                      variant_class=as.character(unique(as.character(df_genes$variant_class)))) %>% \n",
     "    left_join(\n",
-    "        df_genes, by=c(\"sample\",\"symbol\")\n",
+    "        df_genes, by=c(\"sample\",\"symbol\",\"variant_class\")\n",
     "        ) %>% \n",
-    "    mutate(n=ifelse(is.na(n),0,n)) \n",
+    "    mutate(n=ifelse(is.na(n),0,n))\n",
     "}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "id": "f3efce96",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Plotting the data\n",
+    "\n",
+    "variant_class_pretty <- c(\"indel\" = \"Copy number variation (CNV)\",\n",
+    "                          \"SNV\" = \"Single nucleotide variation (SNV)\")\n",
+    "\n",
     "final_plot <- df_genes_processed %>%\n",
     "    mutate(\n",
     "        sample=factor(sample,\n",
     "                      levels=sort(unique(df_genes$sample))),\n",
     "        symbol=factor(symbol,\n",
-    "                      levels=c(\"PIK3CA\",\"APC\",\"BRAF\",\"KRAS\"))\n",
+    "                      levels=c(\"PIK3CA\",\"APC\",\"BRAF\",\"KRAS\",\"TP53\")),\n",
+    "        variant_class=factor(variant_class,\n",
+    "                             levels=c(\"indel\",\"SNV\"),\n",
+    "                             labels=c(\"Copy number variation (CNV)\",\n",
+    "                                      \"Single nucleotide polimorfism (SNP)\"))\n",
     "    ) %>%\n",
     "    ggplot(aes(sample, n, fill=symbol)) +\n",
     "    geom_bar(stat=\"identity\", color=\"black\", \n",
     "             position=position_dodge()) +\n",
-    "    scale_fill_manual(values=c(\"white\",\"gray\",\"black\",\"orange\")) +\n",
+    "    scale_fill_manual(values=c(\"white\",\"lightgray\",\n",
+    "                               \"#99DBF5\",\"#FFEEBB\",\n",
+    "                               \"#EA906C\")) +\n",
     "    scale_y_continuous(expand=expansion(0),\n",
-    "                       limits=c(0,100),\n",
-    "                       breaks=seq(0,100,25)) +\n",
+    "                       limits=c(0,250),\n",
+    "                       breaks=seq(0,250,50)) +\n",
+    "    facet_wrap(~variant_class, ncol=1, scales=\"free_y\") +\n",
     "    labs(\n",
-    "        title = \"Distribution of the number of genes per samples\",\n",
+    "        title = \"Distribution of the variants per genes and samples\",\n",
     "        x = \"Samples\",\n",
-    "        y = \"Number of variants\"\n",
+    "        y = \"Number of variants\",\n",
+    "        fill=\"Genes\"\n",
     "    ) +\n",
-    "    theme_classic() +\n",
+    "    theme_test() +\n",
     "    theme(\n",
     "        plot.title=element_text(hjust=.5,size=16,face=\"bold\"),\n",
+    "        plot.background=element_rect(linewidth=1, color=\"black\"),\n",
     "        axis.title=element_text(face=\"bold\", size=14),\n",
     "        axis.text=element_text(color=\"black\", size=10),\n",
-    "        legend.position=\"top\"\n",
+    "        axis.text.x=element_text(angle = 20, hjust = .9, vjust = .9),\n",
+    "        axis.ticks.x = element_line(linewidth=.5),\n",
+    "        axis.ticks.length.x = unit(.2,\"cm\"),\n",
+    "        legend.position=\"top\",\n",
+    "        legend.title=element_text(size=12, face=\"bold\"),\n",
+    "        strip.background=element_blank(),\n",
+    "        strip.text=element_text(size=11)\n",
     "    )\n",
     "\n",
-    "ggsave(file=\"../results/biostatistics/plots/final_plot.png\",\n",
+    "ggsave(file=\"plots/final_plot.png\",\n",
     "       plot=final_plot,\n",
-    "       heigh=5,\n",
-    "       width=10)\n"
+    "       heigh=7,\n",
+    "       width=9)\n",
+    "\n",
+    "#ggsave(file=\"../results/finish_line/final_plot.html\",\n",
+    "#       plot=final_plot,\n",
+    "#       heigh=5,\n",
+    "#       width=10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "524f120b",
+   "execution_count": 77,
+   "id": "560c5b0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "?ggsave()"
+    "?theme()"
    ]
   }
  ],
