ligera modificación del plot
Former-commit-id: 4d283f38c4696f61533f9bb3eb84c00f2c2f7cb7

--- a/code/design_final_plot.ipynb
+++ b/code/design_final_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5ab7c903",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "044a07a4",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2d3be5f1",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "c378515a",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "f3efce96",
    "metadata": {},
    "outputs": [],
@@ -117,9 +117,10 @@
     "                               \"#99DBF5\",\"#FFEEBB\",\n",
     "                               \"#EA906C\")) +\n",
     "    scale_y_continuous(expand=expansion(0),\n",
-    "                       limits=c(0,250),\n",
+    "                       limits=c(0,260),\n",
     "                       breaks=seq(0,250,50)) +\n",
-    "    facet_wrap(~variant_class, ncol=1, scales=\"free_y\") +\n",
+    "    facet_wrap(~variant_class, ncol=1, \n",
+    "               strip.position=\"left\", scales=\"free_y\") +\n",
     "    labs(\n",
     "        title = \"Distribution of the variants per genes and samples\",\n",
     "        x = \"Samples\",\n",
@@ -138,7 +139,8 @@
     "        legend.position=\"top\",\n",
     "        legend.title=element_text(size=12, face=\"bold\"),\n",
     "        strip.background=element_blank(),\n",
-    "        strip.text=element_text(size=11)\n",
+    "        strip.text=element_text(size=10.5, face=\"bold\"),\n",
+    "        strip.placement=\"outside\"\n",
     "    )\n",
     "\n",
     "ggsave(file=\"plots/final_plot.png\",\n",
